Add redirect index.html file.

--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,6 @@
 <!--
    - $File: index.html $
-   - $Date: 2018-09-27 20:33:18 $
+   - $Date: 2018-09-28 21:19:30 $
    - $Revision: $
    - $Creator: Jen-Chieh Shen $
    - $Notice: See LICENSE.txt for modification and distribution information
@@ -11,108 +11,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JCSUnity - Scripting Manual</title>
+  <title>Redirecting..</title>
   <meta charset="UTF-8"/>
 
-  <!-- Lib CSS -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet"/>
+  <!-- Redirect to Manual homepage as default. -->
+  <meta http-equiv="refresh"
+        content="0; url=./Manual/index.html">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-  <!-- Own style sheet -->
-  <link href="./css/style.css" rel="stylesheet"/>
-
-  <!-- Toggle this to who DEBUG container -->
-  <!-- <link href="./css/util.css" rel="stylesheet"/> -->
-  
 </head>
 <body>
 
-  <header>
-    <div id="header-container" class="vis-green">
-      <a href="#">
-        <div id="logo-tab" class="vis-red">
-          <span id="jcsunity-logo">JCSUnity</span>
-          <span id="vr-char">|</span>
-          <span id="documentation-text">DOCUMENTATION</span>
-        </div>
-      </a>
-
-      <div id="selection-tab" class="vis-yellow">
-        <a href="">
-          <div class="selection-btn manual-btn vis-red">
-            Manual
-          </div>
-        </a>
-
-        <a href="">
-          <div class="selection-btn scripting-api-btn vis-red">
-            Scrpiting API
-          </div>
-        </a>
-      </div>
-    </div>
-
-    <div id="version-tab" class="vis-green">
-      <div id="version-text-container" class="vis-red">
-        Development Version:
-        <span id="version-text">
-          1.8.3
-        </span>
-      </div>
-    </div>
-
-    <div id="scroll-bar-tab">
-      <div id="scroll-bar-container" class="vis-green">
-        <h3>JCSUnity Manual</h3>
-        <hr/>
-      </div>
-    </div>
-  </header>
-
-
-  <div id="content" class="vis-green">
-    <div id="content-header">
-      <h1>Welcome to the JCSUnity Scripting Reference!</h1>
-    </div>
-
-    <div id="content-body">
-      <p>
-        This section of the documentation contains details of the scripting API that Unity provides. To use this information, you should be familiar with the basic theory and practice of scripting in Unity which is explained in the Scripting section of our manual.
-      </p><br/>
-
-      <p>
-        The scripting reference is organised according to the classes available to scripts which are described along with their methods, properties and any other information relevant to their use.
-      </p><br/>
-
-      <p>
-        The pages are extensively furnished with example code ("examples"); notwithstanding anything in the Terms of Service to the contrary, Unity grants you a non-exclusive, non-transferable, non-sublicensable, royalty-free license to access, to use, to modify, and to distribute the examples without crediting Unity.
-      </p><br/>
-
-      <p>
-        API are grouped by namespaces they belong to, and can be selected from the sidebar to the left. For most users, the UnityEngine section will be the main port of call.
-      </p>
-    </div>
-
-    <hr/>
-
-    <div id="content-footer" class="vis-red">
-      Copyright © 2018 JCSUnity Group. Publication: 2018.2-002I. Built: 2018-09-28.
-    </div>
-  </div>
-
-
-  <!-- --------------------------------------------------- -->
-
-  <!-- 3rd party JS -->
-  <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-
-  <!-- own JS -->
-  <script src="./js/main.js"></script>
+  <!-- Empty.. -->
 
 </body>
 </html>
