--- a/website/Manual/index.html
+++ b/website/Manual/index.html
@@ -32,7 +32,7 @@
     <div id="header-container" class="vis-green">
       <a href="#">
         <div id="logo-tab" class="vis-red">
-          <span id="jcsunity-logo">
+          <span id="logo">
             <span class="manual-name"></span>
           </span>
           <span id="vr-char">|</span>
@@ -74,26 +74,17 @@
 
     <div id="scroll-bar-tab">
       <div id="scroll-bar-container" class="vis-green">
-        <div class="scrollbar-inner">
-          <h3><div id="scroll-bar-title"></div></h3>
-          <hr/>
-          <div id="index-pos">
-            <div class="sb-dir vis-green">
-              Directory Name
-              <div class="sb-file vis-red sb-layer-2">
-                JCS_Camera
-              </div>
-            </div>
-          </div>
+        <h3><div id="scroll-bar-title"></div></h3>
+        <hr/>
+        <div id="index-pos">
+          <!-- NOTE(jenchieh): Scrollbar index here.. -->
         </div>
       </div>
+    </div>
   </header>
 
 
   <div id="content-container" class="vis-green">
-    <div id="content-header">
-      <h1><span class="manual-name"></span> User Manual (<span class="version-jcsunity"></span>)</h1>
-    </div>
 
     <div id="content-body">
       <div id="content"></div>
