update script ref core.

--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -33,7 +33,7 @@
     <div id="header-container" class="vis-green">
       <a href="#">
         <div id="logo-tab" class="vis-red">
-          <span id="jcsunity-logo">
+          <span id="logo">
             <span class="manual-name"></span>
           </span>
           <span id="vr-char">|</span>
@@ -78,16 +78,15 @@
       <div id="scroll-bar-container" class="vis-green">
         <h3><div id="scroll-bar-title"></div></h3>
         <hr/>
-        <div id="index-pos"></div>
+        <div id="index-pos">
+          <!-- NOTE(jenchieh): Scrollbar index here.. -->
+        </div>
       </div>
     </div>
   </header>
   
   
   <div id="content-container" class="vis-green">
-    <div id="content-header">
-      <h1>Welcome to the <span class="manual-name"> Scripting Reference!</h1>
-    </div>
 
     <div id="content-body">
       <div id="content"></div>
