--- a/website/ScriptReference/intro.html
+++ b/website/ScriptReference/intro.html
@@ -8,6 +8,9 @@
 -->
 
 
+<div id="content-header">
+  <h1>Welcome to the <span class="manual-name"></span> Scripting Reference!</h1>
+</div>
 
 <p>
   This section of the documentation contains details of the scripting API that Unity provides. To use this information, you should be familiar with the basic theory and practice of scripting in Unity which is explained in the Scripting section of our manual.
