--- a/website/Manual/index.html
+++ b/website/Manual/index.html
@@ -72,32 +72,35 @@
       </div>
     </div>
 
-    <div id="scroll-bar-tab">
-      <div id="scroll-bar-container" class="vis-green">
-        <h3><div id="scroll-bar-title"></div></h3>
-        <hr/>
-        <div id="index-pos">
-          <!-- NOTE(jenchieh): Scrollbar index here.. -->
-        </div>
-      </div>
-    </div>
   </header>
 
 
   <div id="content-container" class="vis-green">
 
-    <div id="content-body">
-      <div id="content"></div>
+    <div id="scroll-bar-tab">
+      <div id="scroll-bar-container" class="vis-green">
+        <h3><div id="scroll-bar-title"></div></h3>
+        <hr id="scroll-bar-hr" />
+        <div id="index-pos">
+          <!-- NOTE(jenchieh): Scrollbar index here.. -->
+        </div>
+      </div>
     </div>
 
-    <hr/>
+    <div id="content-wrapper">
+      <div id="content-body">
+        <div id="content"></div>
+      </div>
 
-    <div id="content-footer" class="vis-red">
-      <span class="copyright">COPYRIGHT-TEXT</span>
+      <hr id="content-hr" />
+
+      <div id="content-footer" class="vis-red">
+        <span class="copyright">COPYRIGHT-TEXT</span>
+      </div>
     </div>
   </div>
-
-
+  
+  
   <!-- --------------------------------------------------- -->
 
   <!-- own JS -->
