Load native lib.

--- a/website/css-lib.html
+++ b/website/css-lib.html
@@ -11,14 +11,14 @@
 <link rel="icon" href="../favicon.ico" />
 
 <!-- Lib CSS -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" rel="stylesheet"/>
+<link href="../css/normalize.min.css" rel="stylesheet"/>
 
 <!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+<link href="../css/google-font.css" rel="stylesheet">
 
 <!-- Own style sheet -->
-<link href="../css/scrollbar.css" rel="stylesheet"/>
 <link href="../css/style.css" rel="stylesheet"/>
+<link href="../css/content.css" rel="stylesheet"/>
 
 <!-- Toggle this to who DEBUG container -->
 <!-- <link href="../css/util.css" rel="stylesheet"/> -->
