--- a/website/Manual/index.html
+++ b/website/Manual/index.html
@@ -16,7 +16,7 @@
 
   <!-- jQuery -->
   <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    src="../js/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
@@ -99,8 +99,8 @@
       </div>
     </div>
   </div>
-  
-  
+
+
   <!-- --------------------------------------------------- -->
 
   <!-- own JS -->
