--- a/website/Manual/intro.html
+++ b/website/Manual/intro.html
@@ -9,5 +9,11 @@
 
 
 <div id="content-header">
-  <h1><span class="manual-name"></span> User Manual (<span class="version-jcsunity"></span>)</h1>
+  <h1>
+    <span class="manual-name"></span> User Manual (<span class="version-jcsunity"></span>)
+  </h1>
 </div>
+
+<p>
+  JCSUnity is a component driven Framework built to allow the user to quickly generate commonly used game mechanics and features such as UI functionality and player movement. This will allow for a faster initial development. Most components work individually while other components must be used in tandem with others. Individually components can be combined to create new behaviors.
+</p>
