Update scriptapi content.

--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -16,7 +16,7 @@
 
   <!-- jQuery -->
   <script
-    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    src="../js/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
 
@@ -26,9 +26,8 @@
 
 </head>
 <body>
-
   <div id="script-reference-page"></div>
-
+  
   <header>
     <div id="header-container" class="vis-green">
       <a href="#">
