--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -15,10 +15,7 @@
   <meta charset="UTF-8"/>
 
   <!-- jQuery -->
-  <script
-    src="../js/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+  <script src="../js/jquery-3.3.1.min.js"></script>
 
   <div id="css-lib"></div>
 
