Remove hash refresh.

--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -24,10 +24,10 @@
 </head>
 <body>
   <div id="script-reference-page"></div>
-  
+
   <header>
     <div id="header-container" class="vis-green">
-      <a href="#">
+      <a href="">
         <div id="logo-tab" class="vis-red">
           <span id="logo">
             <span class="manual-name"></span>
