--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -27,7 +27,7 @@
 
   <header>
     <div id="header-container" class="vis-green">
-      <a href="">
+      <a href="./index.html">
         <div id="logo-tab" class="vis-red">
           <span id="logo">
             <span class="manual-name"></span>
