Add search form.

--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -52,8 +52,16 @@
           </div>
         </a>
       </div>
-    </div>
 
+      <div id="search-input-container">
+        <div id="search-input-border"></div>
+        <form >
+          <input placeholder="" type="text" value=""/>
+        </form>
+      </div>
+      <div id="search-btn"></div>
+    </div>
+    
     <div id="version-tab" class="vis-green">
       <div id="version-text-container" class="vis-red">
         <span class="manual-name"></span> Version:
