Rewrite the placeholder text.

--- a/website/ScriptReference/intro.html
+++ b/website/ScriptReference/intro.html
@@ -13,17 +13,28 @@
 </div>
 
 <p>
-  This section of the documentation contains details of the scripting API that Unity provides. To use this information, you should be familiar with the basic theory and practice of scripting in Unity which is explained in the Scripting section of our manual.
-</p><br/>
+  This section of the documentation contains the details of the scripting API of the
+  JCSUnity. To use this information, you should be familiar with Unity Scripting API
+  and the concept of the basic game engine architecture.
+</p>
+<br/>
 
 <p>
-  The scripting reference is organised according to the classes available to scripts which are described along with their methods, properties and any other information relevant to their use.
-</p><br/>
+  This scripting reference is layouted corresponding to JCSUnity scripts
+  section under
+  <a href="https://github.com/jcs090218/JCSUnity/tree/master/Assets/JCSUnity/Scripts">
+    JCSUnity assets folder
+  </a>
+  . In addition, is organized according to the classes avaliable to scripts which
+  are described along with their variables, functions and any other relevant
+  information to use.
+</p>
+<br/>
 
 <p>
-  The pages are extensively furnished with example code ("examples"); notwithstanding anything in the Terms of Service to the contrary, Unity grants you a non-exclusive, non-transferable, non-sublicensable, royalty-free license to access, to use, to modify, and to distribute the examples without crediting Unity.
-</p><br/>
-
-<p>
-  API are grouped by namespaces they belong to, and can be selected from the sidebar to the left. For most users, the UnityEngine section will be the main port of call.
+  The pages contain example code ("examples") if necessary to describe the scripting
+  reference usage. JCSUnity does only uses 'JCSUnity' as the only namespace in this
+  tool within the code. Scripts that are not prefix with JCS underscore it could be
+  utility scripts that JCSUnity include and ensure the utility script itself is free
+  to use.
 </p>
