Add homepage link

--- a/website/Manual/index.html
+++ b/website/Manual/index.html
@@ -60,7 +60,7 @@
       </div>
       <div id="search-btn"></div>
     </div>
-    
+
     <div id="version-tab" class="vis-green">
       <div id="version-text-container" class="vis-red">
         <span class="manual-name"></span> Version:
@@ -74,12 +74,14 @@
         <span class="version-text">
           <span class="version-unity"></span>
         </span>
+
+        <a class="homepage-link" href="">HOMEPAGE_TEXT</a>
       </div>
     </div>
-
+    
   </header>
-
-
+  
+  
   <div id="content-container" class="vis-green">
 
     <div id="scroll-bar-tab">
