--- a/website/Manual/intro.html
+++ b/website/Manual/intro.html
@@ -10,7 +10,7 @@
 
 <div id="content-header">
   <h1>
-    <span class="manual-name"></span> User Manual (<span class="version-jcsunity"></span>)
+    <span class="manual-name"></span> User Manual (<span class="version-num-01"></span>)
   </h1>
 </div>
 
