Impl version number and version title markup.

--- a/website/Manual/index.html
+++ b/website/Manual/index.html
@@ -63,25 +63,35 @@
 
     <div id="version-tab" class="vis-green">
       <div id="version-text-container" class="vis-red">
-        <span class="manual-name"></span> Version:
-        <span class="version-text">
-          <span class="version-jcsunity"></span>
-        </span>
 
-        &nbsp
+        <span class="version-title-01"></span>
+        <span class="version-text"><span class="version-num-01"></span></span>
 
-        Unity Version:
-        <span class="version-text">
-          <span class="version-unity"></span>
-        </span>
+        <span class="version-title-02"></span>
+        <span class="version-text"><span class="version-num-02"></span></span>
 
+        <span class="version-title-03"></span>
+        <span class="version-text"><span class="version-num-03"></span></span>
+
+        <span class="version-title-04"></span>
+        <span class="version-text"><span class="version-num-04"></span></span>
+
+        <span class="version-title-05"></span>
+        <span class="version-text"><span class="version-num-05"></span></span>
+
+        <span class="version-title-06"></span>
+        <span class="version-text"><span class="version-num-06"></span></span>
+
+        <span class="version-title-07"></span>
+        <span class="version-text"><span class="version-num-07"></span></span>
+        
         <a class="homepage-link" href="">HOMEPAGE_TEXT</a>
       </div>
     </div>
-    
+
   </header>
-  
-  
+
+
   <div id="content-container" class="vis-green">
 
     <div id="scroll-bar-tab">
