Add space between each version text.

--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -67,24 +67,31 @@
 
         <span class="version-title-01"></span>
         <span class="version-text"><span class="version-num-01"></span></span>
+        &nbsp
 
         <span class="version-title-02"></span>
         <span class="version-text"><span class="version-num-02"></span></span>
+        &nbsp
 
         <span class="version-title-03"></span>
         <span class="version-text"><span class="version-num-03"></span></span>
+        &nbsp
 
         <span class="version-title-04"></span>
         <span class="version-text"><span class="version-num-04"></span></span>
+        &nbsp
 
         <span class="version-title-05"></span>
         <span class="version-text"><span class="version-num-05"></span></span>
+        &nbsp
 
         <span class="version-title-06"></span>
         <span class="version-text"><span class="version-num-06"></span></span>
+        &nbsp
 
         <span class="version-title-07"></span>
         <span class="version-text"><span class="version-num-07"></span></span>
+        &nbsp
 
         <a class="homepage-link" href="">HOMEPAGE_TEXT</a>
       </div>
