--- a/website/Manual/index.html
+++ b/website/Manual/index.html
@@ -26,9 +26,9 @@
   <div id="manual-page"></div>
 
   <header>
-    <div id="header-container" class="vis-green">
+    <div id="header-container">
       <a href="./index.html">
-        <div id="logo-tab" class="vis-red">
+        <div id="logo-tab">
           <span id="logo">
             <span class="manual-name"></span>
           </span>
@@ -37,16 +37,16 @@
         </div>
       </a>
 
-      <div id="selection-tab" class="vis-yellow">
+      <div id="selection-tab">
         <!-- NOTE(jenchieh): reload current page. -->
         <a href="./index.html" id="manual-btn">
-          <div class="selection-btn vis-red" id="selected-btn">
+          <div class="selection-btn" id="selected-btn">
             Manual
           </div>
         </a>
 
         <a href="../ScriptReference/index.html" id="scripting-api-btn">
-          <div class="selection-btn vis-red">
+          <div class="selection-btn">
             Scrpiting API
           </div>
         </a>
@@ -61,8 +61,8 @@
       <div id="search-btn"></div>
     </div>
 
-    <div id="version-tab" class="vis-green">
-      <div id="version-text-container" class="vis-red">
+    <div id="version-tab">
+      <div id="version-text-container">
 
         <span class="version-title-01"></span>
         <span class="version-text"><span class="version-num-01"></span></span>
@@ -99,10 +99,10 @@
   </header>
 
 
-  <div id="content-container" class="vis-green">
+  <div id="content-container">
 
     <div id="scroll-bar-tab">
-      <div id="scroll-bar-container" class="vis-green">
+      <div id="scroll-bar-container">
         <h3><div id="scroll-bar-title"></div></h3>
         <hr id="scroll-bar-hr" />
         <div id="index-pos">
@@ -118,7 +118,7 @@
 
       <hr id="content-hr" />
 
-      <div id="content-footer" class="vis-red">
+      <div id="content-footer">
         <span class="copyright">COPYRIGHT-TEXT</span>
       </div>
     </div>
