Add hl code block.

--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -11,11 +11,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JCSUnity - Scripting API</title>
+  <title>Manual Name - Scripting API</title>
   <meta charset="UTF-8"/>
 
+  <!-- Highlight.js -->
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
+  <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
+  <script> hljs.initHighlightingOnLoad(); </script>
+
+  <!-- Showdown -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+
   <!-- jQuery -->
-  <script src="../js/jquery-3.4.1.min.js"></script>
+  <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
   <div id="js-lib"></div>
   <div id="css-lib"></div>
 
