--- a/website/js-lib.html
+++ b/website/js-lib.html
@@ -7,4 +7,4 @@
    -                   Copyright © 2019 by Shen, Jen-Chieh $
 -->
 
-<script src="../js/showdown.min.js"></script>
+<script src="../js/showdown-highlight.js"></script>
