--- a/website/ScriptReference/index.html
+++ b/website/ScriptReference/index.html
@@ -15,13 +15,14 @@
   <meta charset="UTF-8"/>
 
   <!-- Highlight.js -->
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/default.min.css">
+  <!-- NOTE: Avoid css property error -->
+  <link href="../css/highlight.min.css" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
   <script> hljs.initHighlightingOnLoad(); </script>
 
   <!-- Showdown -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+  <script src="../js/showdown-highlight.js"></script>
 
   <!-- jQuery -->
   <script
@@ -57,7 +58,7 @@
           </div>
         </a>
 
-        <!-- NOTE(jenchieh): reload current page. -->
+        <!-- NOTE: reload current page. -->
         <a href="./index.html" id="scripting-api-btn">
           <div class="selection-btn" id="selected-btn">
             Scrpiting API
@@ -118,7 +119,7 @@
         <h3><div id="scroll-bar-title"></div></h3>
         <hr id="scroll-bar-hr" />
         <div id="index-pos">
-          <!-- NOTE(jenchieh): Scrollbar index here.. -->
+          <!-- NOTE: Scrollbar index here.. -->
         </div>
       </div>
     </div>
